<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.16">
  <DUT Name="E_HomeState" Id="{d736ea3b-71fe-4ca6-9b67-e0522fcd9bc9}">
    <Declaration><![CDATA[TYPE E_HomeState :
(
	READY,
	INIT,
	MOVING,
	MOVING2,
	CHECK,
	ERROR,
	WRITE,
	DONE
	
) UDINT;
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>