<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.16">
  <DUT Name="ST_VGP" Id="{4bbaa8fe-fc94-469a-8575-48b17c1a966d}">
    <Declaration><![CDATA[TYPE ST_VGP :
STRUCT

	{attribute 'pytmc' := '
    pv: POS_RDBK;
	io: i;
    '}
	// Inputs
	i_iPosition	:	REAL; //Encoder position readback (if it exists)
	{attribute 'pytmc' := '
    pv: ENC_RDBK;
	io: i;
    '}
	// Inputs
	rEnoder_Position	:	REAL; //Encoder position readback (if it exists)
	{attribute 'pytmc' := '
    pv: ERROR;
	io: i;
    '}
	// Inputs
	pv_xError	:	BOOL;
	
	{attribute 'pytmc' := '
    pv: IS_HOMED;
	io: i;
    '}
	// Inputs
	pv_xHomed	:	BOOL :=false;
	
	//Softvariables
	{attribute 'pytmc' := '
    pv: ILK_OK;
	io: i;
    '}
	xIlkOK	:	BOOL := FALSE; // Interlock Bit
	//Manually Pressing valve "Open/Close" on EDM
	{attribute 'pytmc' := '
    pv: OPN_SW;
	io: io;
    '}
	pv_xOPN_SW	: BOOL;
	
	{attribute 'pytmc' := '
    pv: GO_SW;
	io: io;
    '}
	pv_xGo_SW	: BOOL;
	
	{attribute 'pytmc' := '
    pv: HOME_SW;
	io: io;
    '}
	pv_xHome_SW	: BOOL;
	
	{attribute 'pytmc' := '
    pv: ABORT;
	io: io;
    '}
	pv_xABORT_SW	: BOOL;
	
	rUpperLimit	:	REAL:=100;	//Percentage Upper limit on valve open
	{attribute 'pytmc' := '
	pv: POS_CTRL;
	io: io; 
	'}
	rReqPosition	:	REAL; 
	// Outputs
	{attribute 'pytmc' := '
	pv: POS_DES;
	io: io;
	'}
	q_iRawPosition	:	INT; //Position control 
	{attribute 'pytmc' := '
	pv: STATE;
	type: mbbi ;
	field: ZRST CLOSE ;
	field: ONST OPEN;
	field: TWST PRESS CNTRL ;
	field: THST MANUAL CNTRL ;
	io: io;
	'}
	eValveControl	:	E_VCN := CloseValve; // Valve control state
	/// state machine state 
	{attribute 'pytmc' := '
	pv: Axis_STATE;
	io: io;
	'}
	state: E_MoveState; //Axis Move state
	ftIlk	:	F_TRIG;	

END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>